Simplified link creation in Controller by adding EmployeeModelAssembler